@@ -2,8 +2,11 @@ ubuntu-release-upgrader (1:19.04.8) UNRELEASED; urgency=medium
 
   * debian/source_ubuntu-release-upgrader.py: Include xorg_fixup.log if it
     exists.
+  * DistUpgrade/xorg_fix_proprietary.py: modify how the system is checked to
+    see if nvidia is being used, drop fglrx check since it has been
+    deprecated. (LP: #1773637)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 14 Dec 2018 15:28:46 -0800
+ -- Brian Murray <brian@ubuntu.com>  Mon, 17 Dec 2018 14:04:03 -0800
 
 ubuntu-release-upgrader (1:19.04.7) disco; urgency=medium
 
